@@ -1140,7 +1140,7 @@ BEGIN
     IDS_PROC_CLEANUPFINISHED "Cleanup has finished"
     IDS_PROC_REPOCREATEERR  "Subversion reported an error while creating a repository!\nMake sure the folder is empty and not write protected."
     IDS_PROC_EXPORT_1       "Select folder to export to.\nYou might need to create a new folder before performing this export."
-    IDS_PROC_EXPORT_2       "exporting %s to"
+    IDS_PROC_EXPORT_2       "Export unversioned files too"
     IDS_PROC_EXPORT_3       "Exporting..."
     IDS_PROC_EXPORT_4       "exported\n%s\nto\n%s"
     IDS_PROC_COPY_SUCCESS   "Tagged the working copy to %s"
